fixed spacing issue on ul for instructions

--- a/src/component-css/recipe-list.css
+++ b/src/component-css/recipe-list.css
@@ -9,6 +9,11 @@ div.recipe-list{
     );
 }
 
+ul{
+    margin:0px;
+    padding: 0px;
+}
+
 @media only screen and (min-width: 768px) {
     div.recipe-list{
         margin-left: 10px;
